--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>9.3.0</version>
+		</dependency>
 
 	</dependencies>
 
